--- a/orchestrator/requirements.txt
+++ b/orchestrator/requirements.txt
@@ -1,7 +1,10 @@
 fastapi
 uvicorn[standard]
 httpx
+aiofiles
 pydantic
+asyncpg==0.29.0
+sqlalchemy==1.4.27
 
 # LangGraph and orchestration tools
 langgraph
