--- a/orchestrator/requirements.txt
+++ b/orchestrator/requirements.txt
@@ -1,20 +1,26 @@
-fastapi
-uvicorn[standard]
-httpx
-aiofiles
-pydantic
+# orchestrator/requirements.txt (Updated)
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+httpx==0.28.1
+aiofiles==24.1.0
+pydantic==2.11.7
 asyncpg==0.29.0
 sqlalchemy==1.4.27
 
 # LangGraph and orchestration tools
-langgraph
-langchain
+langgraph==0.6.3
 langchain-core
 langchain-openai
 openai
 fastmcp
 
-tiktoken
-python-dotenv
+# LlamaIndex for data ingestion
+# llama-index-core==0.13.0
+# llama-index-readers-google==0.7.0
+# llama-index-readers-notion==0.4.0
+# llama-index-readers-database==0.5.0
+
+tiktoken==0.9.0
+python-dotenv==1.1.1
 
 pytest
