--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.8"
 
 services:
-  # orchestrator:
-  #   build: ./orchestrator
-  #   ports:
-  #     - "8001:8000"
-  #   env_file:
-  #     - ./orchestrator/.env
-  #   volumes:
-  #     - ./orchestrator:/app
-  #   networks:
-  #     - app-network
+  orchestrator:
+    build: ./orchestrator
+    ports:
+      - "8001:8000"
+    env_file:
+      - ./orchestrator/.env
+    volumes:
+      - ./orchestrator:/app
+    networks:
+      - app-network
   
   # github-mcp:
   #   build: ./mock-mcps/github-mcp
