--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,14 @@
 version: "3.8"
 
 services:
-  orchestrator:
-    build: ./orchestrator
-    ports:
-      - "8001:8000"
-    env_file:
-      - ./orchestrator/.env
-    volumes:
-      - ./orchestrator:/app
-    networks:
-      - app-network
-  
-  # github-mcp:
-  #   build: ./mock-mcps/github-mcp
+  # orchestrator:
+  #   build: ./orchestrator
   #   ports:
-  #     - "8101:8080"
-  #   networks:
-  #     - app-network
-
-  # qa-generator-mcp:
-  #   build: ./mock-mcps/qa-generator-mcp
-  #   ports:
-  #     - "8102:8080"
-  #   networks:
-  #     - app-network
-
-  # postgres-writer-mcp:
-  #   build: ./mock-mcps/postgres-writer-mcp
-  #   ports:
-  #     - "8103:8080"
+  #     - "8001:8000"
+  #   env_file:
+  #     - ./orchestrator/.env
+  #   volumes:
+  #     - ./orchestrator:/app
   #   networks:
   #     - app-network
   
@@ -38,13 +17,28 @@ services:
       context: ./auth-service
       dockerfile: Dockerfile.dev
     ports:
-      - "8000:80"
+      - "8000:8000"
     env_file:
       - ./auth-service/.env
     volumes:
       - ./auth-service:/app
     networks:
       - app-network
+  
+  credential-broker-service:
+    build: 
+      context: ./credential-broker-service
+      dockerfile: Dockerfile
+    ports:
+      - "8002:8000"
+    env_file:
+      - ./credential-broker-service/.env
+    volumes:
+      - ./credential-broker-service:/app
+    networks:
+      - app-network
+  
+
   postgres:
     image: postgres:13
     environment:
