--- a/knowledge-graph-builder/requirements.txt
+++ b/knowledge-graph-builder/requirements.txt
@@ -1,23 +1,53 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-neo4j==5.15.0
-langchain==0.0.352
-langchain-openai==0.0.5
-langchain-google-vertexai==1.0.1
-langchain-community==0.0.10
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-multipart==0.0.6
+# FastAPI and server
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+gunicorn==23.0.0
+python-multipart==0.0.20
+
+# Neo4j
+neo4j==5.28.2
+
+# LangChain and LLM
+langchain==0.3.25
+langchain-aws==0.2.25
+langchain-anthropic==0.3.15
+langchain-fireworks==0.3.0
+langchain-community==0.3.25
+langchain-core==0.3.65
+langchain-experimental==0.3.4
+langchain-google-vertexai==2.0.25
+langchain-google-genai
+langchain-groq==0.3.2
+langchain-openai==0.3.23
+langchain-text-splitters==0.3.8
+langchain-huggingface==0.3.0
+
+# LLM Providers
+openai
+anthropic
+google-generativeai
+
+# Pydantic
+pydantic==2.11.7
+pydantic-settings==2.10.1
+
+# Embeddings
 sentence-transformers==2.2.2
-openai==1.6.1
-google-cloud-storage==2.12.0
-boto3==1.34.0
-youtube-transcript-api==0.6.1
-pypdf==3.17.1
-pymupdf==1.23.8
-unstructured==0.11.8
+
+# Document processing
+PyPDF2==3.0.1
+PyMuPDF==1.26.1
+unstructured[all-docs]
+unstructured==0.17.2
+unstructured-client==0.36.0
+unstructured-inference==1.0.5
+youtube-transcript-api==1.1.0
 wikipedia==1.4.0
+
+# Storage
+boto3==1.38.36
+botocore==1.38.36
+
+# Utilities
 python-dotenv==1.0.0
-ragas==0.1.1
-numpy==1.24.3
-pandas==2.0.3
+tenacity==8.2.3
