--- a/oraclous-core-service/requirements.txt
+++ b/oraclous-core-service/requirements.txt
@@ -27,6 +27,8 @@ google-auth==2.40.3
 pandas==2.3.1
 openpyxl==3.1.5  # Excel file support
 
+jsonschema==4.25.1
+
 # Async utilities
 asyncio-mqtt==0.16.2
 
