Enhanced knowledge graph builder with new services and llm support

--- a/knowledge-graph-builder/.env.example
+++ b/knowledge-graph-builder/.env.example
@@ -12,8 +12,11 @@ POSTGRES_URL=postgresql+asyncpg://postgres:password@postgres:5432/kgbuilder
 
 # External Services
 AUTH_SERVICE_URL=http://auth-service:8000
-CREDENTIAL_BROKER_URL=http://credential-broker:8002
-CORE_SERVICE_URL=http://oraclous-core:8001
+CREDENTIAL_BROKER_URL=http://credential-broker:8000
+CORE_SERVICE_URL=http://oraclous-core:8000
+REDIS_URL="redis://redis:6379/0"
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
 
 # Security
 INTERNAL_SERVICE_KEY=your-internal-service-key-here
