--- a/knowledge-graph-builder/requirements.txt
+++ b/knowledge-graph-builder/requirements.txt
@@ -17,6 +17,15 @@ alembic==1.13.3
 pytest==8.4.1
 pytest-asyncio==1.1.0
 
+# LLM required configurations
+langchain-anthropic==0.3.19
+langchain-google-genai==2.1.9
+sentence-transformers==5.1.0
+langchain-experimental==0.3.12
+tiktoken==0.11.0
+celery[redis]==5.5.3
+redis==5.2.1
+
 # Development
 black==25.1.0
 isort==6.0.1
