--- a/knowledge-graph-builder/requirements.txt
+++ b/knowledge-graph-builder/requirements.txt
@@ -13,6 +13,7 @@ python-dotenv==1.0.0
 asyncpg==0.30.0
 sqlalchemy[asyncio]==2.0.42
 psycopg2-binary==2.9.9
+nest-asyncio==1.6.0
 alembic==1.13.3
 pytest==8.4.1
 pytest-asyncio==1.1.0
