--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,46 +12,6 @@ services:
     networks:
       - app-network
   
-  neo4j:
-    image: neo4j:5.23-community
-    container_name: neo4j_llm_graph
-    restart: unless-stopped
-    ports:
-      - "7474:7474"
-      - "7687:7687"
-    environment:
-      - NEO4J_AUTH=neo4j/password
-      - NEO4J_PLUGINS=["apoc", "graph-data-science"]
-      - NEO4J_dbms_security_procedures_unrestricted=apoc.*,gds.*
-      - NEO4J_dbms_security_procedures_allowlist=apoc.*,gds.*
-    volumes:
-      - neo4j_data:/data
-      - neo4j_logs:/logs
-      - neo4j_plugins:/plugins
-    networks:
-      - app-network
-
-  knowledge-graph-builder:
-    build: 
-      context: ./knowledge-graph-builder
-      dockerfile: Dockerfile
-    container_name: knowledge-graph-builder
-    restart: unless-stopped
-    ports:
-      - "8003:8000"
-    environment:
-      - NEO4J_URI=neo4j://neo4j:7687
-      - NEO4J_USERNAME=neo4j
-      - NEO4J_PASSWORD=password
-    env_file:
-      - .env
-    depends_on:
-      - neo4j
-    volumes:
-      - ./knowledge-graph-builder/app:/app
-    networks:
-      - app-network
-
   auth-service:
     build: 
       context: ./auth-service
@@ -77,7 +37,82 @@ services:
       - ./credential-broker-service:/app
     networks:
       - app-network
-  
+
+  neo4j:
+    image: neo4j:5.23-community
+    container_name: neo4j_llm_graph
+    restart: unless-stopped
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    environment:
+      - NEO4J_AUTH=neo4j/password
+      - NEO4J_PLUGINS=["apoc", "graph-data-science"]
+      - NEO4J_dbms_security_procedures_unrestricted=gds.*, apoc.*
+      - NEO4J_server_default__listen__address=0.0.0.0
+      - NEO4J_server_default__advertised__address=localhost
+      - NEO4J_dbms_databases_default__to__read__only=false
+    volumes:
+      - neo4j_data:/data
+      - neo4j_logs:/logs
+      - neo4j_plugins:/plugins
+    networks:
+      - app-network
+
+  knowledge-graph-worker:
+    build: 
+      context: ./knowledge-graph-builder
+      dockerfile: Dockerfile
+    container_name: knowledge-graph-worker
+    restart: unless-stopped
+    command: celery -A app.services.background_jobs.celery_app worker --loglevel=info
+    environment:
+      - NEO4J_URI=neo4j://neo4j:7687
+      - NEO4J_USERNAME=neo4j
+      - NEO4J_PASSWORD=password
+      - POSTGRES_URL=postgresql+asyncpg://testuser:testpass@postgres:5432/testdatabase
+    env_file:
+      - ./knowledge-graph-builder/.env
+    depends_on:
+      - neo4j
+      - postgres
+      - redis
+    volumes:
+      - ./knowledge-graph-builder/app:/app/app
+      - ./knowledge-graph-builder/logs:/app/logs
+    networks:
+      - app-network
+
+  knowledge-graph-builder:
+    build: 
+      context: ./knowledge-graph-builder
+      dockerfile: Dockerfile
+    container_name: knowledge-graph-builder
+    restart: unless-stopped
+    ports:
+      - "8003:8000"
+    env_file:
+      - ./knowledge-graph-builder/.env
+    depends_on:
+      - neo4j
+      - postgres
+      - redis
+      - auth-service
+      - credential-broker-service
+    volumes:
+      - ./knowledge-graph-builder/app:/app/app
+      - ./knowledge-graph-builder/logs:/app/logs
+    networks:
+      - app-network
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis_cache
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
 
   postgres:
     image: postgres:13
